Fix place title truncation on firefox

--- a/app/assets/stylesheets/_globalnav/_core/_nav.sass
+++ b/app/assets/stylesheets/_globalnav/_core/_nav.sass
@@ -190,8 +190,6 @@
   font-weight: bold
   color: $dark-blue-gray
   line-height: 26px
-  // to take the space away before the comma
-  margin-right: -4px
   &:hover
     text-decoration: none
 
